Keep durable result store compatible with Android minimum